# lingopod

./: .dockerignore  .env.template  .gitignore  Dockerfile  README-dev.md  README.md  main.py  pyproject.toml  requirements.in  requirements.txt  test.db.backup
app/: __init__.py  config.py  models.py  prompt_templates.yaml  server.py  tts_handle.py
docs/: api.md  app_ui.md  competition_entry.md  design.md
server/: alembic.ini  main.py  run.py  run_tests.bat
server/alembic/: README  env.py
server/alembic/versions/: 81d0ebd54177_add_current_step_index_to_task.py  9c37802d27fd_add_progress_message.py  be09bcfc4d20_restructure_task_files_to_json.py  f6e4b88ab88d_initial.py  fe52d265bea5_initial.py
server/api/v1/: api.py  auth.py  configs.py  rss.py  tasks.py  users.py
server/auth/: dependencies.py  utils.py
server/core/: config.py  exceptions.py  logging.py  scheduler.py  thread_pool.py
server/core/prompts/: prompt_templates.yaml
server/crud/: task.py
server/db/: base.py  session.py
server/models/: enums.py  rss.py  system_config.py  task.py  user.py
server/schemas/: config.py  rss.py  task.py  user.py
server/services/: edgetts.py  file.py  llm.py  url_fetcher.py
server/services/rss/: feed_manager.py
server/services/task/: __init__.py  processor.py  task_service.py
server/services/task/steps/: audio.py  audio_merge.py  base.py  content.py  dialogue.py  fetch_content.py  generate_title.py  subtitle.py  translation.py
server/services/task/utils/: context.py  errors.py  progress_tracker.py
server/tests/: conftest.py  test_auth.py  test_complete_task.py  test_configs.py  test_edgetts.py  test_rss.py  test_task_processor.py  test_tasks.py  test_users.py
server/tests/api/: __init__.py
server/tests/utils/: __init__.py  auth.py
server/utils/: decorators.py  prompt_utils.py  time_utils.py
static/: index.html
static/styles/: main.css  player.css
